--- a/apphere/Info.plist
+++ b/apphere/Info.plist
@@ -19,7 +19,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>1.1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>MGLMapboxAccessToken</key>
@@ -31,6 +31,8 @@
 		<key>NSAllowsArbitraryLoadsInWebContent</key>
 		<true/>
 	</dict>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>We show you amazing deals and information about the location around you. </string>
 	<key>NSLocationAlwaysAndWhenInUsageDescription</key>
 	<string>We'll show you cool things near you in the app. With the "always" option,
         we can also alert you via notifications if you don't have the app open.</string>
