Fix location privacy keys

--- a/apphere/Info.plist
+++ b/apphere/Info.plist
@@ -33,12 +33,10 @@
 	</dict>
 	<key>NSBluetoothPeripheralUsageDescription</key>
 	<string>We show you amazing deals and information about the location around you. </string>
-	<key>NSLocationAlwaysAndWhenInUsageDescription</key>
-	<string>We'll show you cool things near you in the app. With the "always" option,
-        we can also alert you via notifications if you don't have the app open.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>We'll show you cool things near you in the app. With the "always" option, we can also alert you via notifications if you don't have the app open.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>We'll show you cool things near you in the app, and alert you via
-        notifications if you don't have the app open.</string>
+	<string>We'll show you cool things near you in the app. With the "always" option, we can also alert you via notifications if you don't have the app open.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>We'll show you cool things near you in the app.</string>
 	<key>UIBackgroundModes</key>
