--- a/apphere/Info.plist
+++ b/apphere/Info.plist
@@ -79,6 +79,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>ArialMTPro-Black.otf</string>
+		<string>Arial Black.ttf</string>
 	</array>
 </dict>
 </plist>
