--- a/apphere/GoogleService-Info.plist
+++ b/apphere/GoogleService-Info.plist
@@ -7,9 +7,9 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>1002863008275-j7cabr9ei1d7655q6es09pcrpe4h0ssd.apps.googleusercontent.com</string>
+	<string>1002863008275-5fvgp72a9ho4ub2a75j015b7vvrduq4h.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.1002863008275-j7cabr9ei1d7655q6es09pcrpe4h0ssd</string>
+	<string>com.googleusercontent.apps.1002863008275-5fvgp72a9ho4ub2a75j015b7vvrduq4h</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBeoT88SugB52YQblM3LpX_hctegeluXho</string>
 	<key>GCM_SENDER_ID</key>
@@ -17,7 +17,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.apphereinc.mvp</string>
+	<string>com.apphereinc.apphere</string>
 	<key>PROJECT_ID</key>
 	<string>apphere-mvp</string>
 	<key>STORAGE_BUCKET</key>
@@ -33,7 +33,7 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:1002863008275:ios:94587811ad1c7f6e</string>
+	<string>1:1002863008275:ios:3796bfd22f41564e</string>
 	<key>DATABASE_URL</key>
 	<string>https://apphere-mvp.firebaseio.com</string>
 </dict>
