--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -3,7 +3,8 @@
   "description": "Cloud Functions for Firebase",
   "dependencies": {
     "firebase-admin": "^5.12.0",
-    "firebase-functions": "^1.0.1"
+    "firebase-functions": "^1.0.1",
+    "grpc": "^1.10.1"
   },
   "private": true
 }
